src/objects/Tour_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Host</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tour Outcomes (Assigned Host)</relationshipLabel>
        <relationshipName>Tour_Outcomes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Email__c</fullName>
        <label>Building Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Building_No_City__c</fullName>
        <formula>Location__r.Location_No_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building No City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelation_age_formula__c</fullName>
        <formula>today() - Tour_Canceled_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancelation age formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Busy, scheduling conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visited different WeWork location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reason (didn&apos;t provide)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Name of the Company of the Contact should be saved here.</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convert_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This used for trigger on Tour (before insert) which will check if the above checkbox is checked then we will be creating an opportunity for the tour and use the same logic as of today.</description>
        <label>Convert Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Notes__c</fullName>
        <description>Notes provided by Customer while booking the Notes.</description>
        <label>Customer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Cancelled__c</fullName>
        <description>Date on which the Tour was cancelled.</description>
        <label>Date Cancelled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Date on which the Tour was Completed.</description>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Rescheduled__c</fullName>
        <description>Date on which the Tour was rescheduled.</description>
        <label>Date Rescheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE(Start_Time_Actual__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_Currently_Have_Healthcare__c</fullName>
        <label>Does Currently Have Healthcare?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Time_Actual__c</fullName>
        <description>End Date and Time of the Tour. Generally Tour End Date should be same as Start Time Date, only Times should be about 2 hours apart max,</description>
        <label>End Time Actual</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time_Local__c</fullName>
        <description>Local End Time which is in hh:mm format in local time.</description>
        <label>End Time (Local)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entry_Type__c</fullName>
        <label>Entry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Tour Wizard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hosted_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Hosted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tour Outcomes (Hosted By)</relationshipLabel>
        <relationshipName>ToursHosted</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_long_you_plan_to_work_at_WeWork__c</fullName>
        <label>How long you plan to work at WeWork</label>
        <picklist>
            <picklistValues>
                <fullName>1-2 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 6 months / forever!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer not to say</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_in_healthcare__c</fullName>
        <label>Interested in healthcare services?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, connect me to Trinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interested_in_payment_processing__c</fullName>
        <label>Interested in payment processing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Journey during which this Tour was booked.</description>
        <label>Journey</label>
        <referenceTo>Journey__c</referenceTo>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <formula>IF( ISBLANK( Lead__c ),  Opportunity__r.Lead_Source_Detail__c , Lead__r.Lead_Source_Detail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Tour_Scheduled__c</fullName>
        <formula>CreatedBy.Profile.Name &amp; &quot; - &quot; &amp; (Blankvalue(TEXT(Lead__r.LeadSource), text(Opportunity__r.LeadSource)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source + Tour Scheduled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>42 Floors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ads-twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olark Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Email/Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWork.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWork.com Health Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWorkLabs.com Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeWork Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yelp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>servicefriendz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Learn_about_payment_processor__c</fullName>
        <label>Learn about payment processor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, connect me to Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <formula>Location__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Email__c</fullName>
        <label>Location Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Location_Phone_Number__c</fullName>
        <formula>IF (TEXT(Location__r.Country__c) = &quot;UK&quot;,
  &quot;02036954926&quot;,
IF (TEXT(Location__r.Country__c) = &quot;USA&quot;,
  &quot;855.593.9675&quot;,
  &quot;855.593.9675&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Special_Instructions__c</fullName>
        <formula>Location__r.Special_Instructions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Special Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Tour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Tour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Qualification__c</fullName>
        <label>Member Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>Good Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OK Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Good Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_space__c</fullName>
        <label>Name of space</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Tour_Notes__c</fullName>
        <label>New Tour Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_Show_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when email is sent from SpaceStation to contact when they are a No Show on a Tour</description>
        <label>No Show Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Show__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Reason__c</fullName>
        <label>Not Interested Reason</label>
        <picklist>
            <controllingField>Tour_Outcome__c</controllingField>
            <picklistValues>
                <fullName>Too Expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Configuration Unsuitable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultural Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Available__c</fullName>
        <label>Office Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Tour_Outcome</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In case if the user wants to reschedule an existing tour, then we capture the existing tour ID in this.</description>
        <inlineHelpText>In case if the user wants to reschedule an existing tour, then we capture the existing tour ID in this.</inlineHelpText>
        <label>Original Tour</label>
        <referenceTo>Tour_Outcome__c</referenceTo>
        <relationshipLabel>Tour Outcomes</relationshipLabel>
        <relationshipName>Tour_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Our_next_steps__c</fullName>
        <label>Our next steps</label>
        <picklist>
            <picklistValues>
                <fullName>Send paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Place an office on temporary hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to wait list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule additional tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send additional information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up on their decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, no longer interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours</relationshipLabel>
        <relationshipName>Tours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>WeWork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeLive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Used to capture promotional code from marketing campaigns</description>
        <inlineHelpText>Used to capture promotional code from marketing campaigns</inlineHelpText>
        <label>Promo Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Code__c</fullName>
        <label>Referred By Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be the contact who referred us the Tour. It can be a member, employee or a broker.</description>
        <inlineHelpText>Enter the contact who referred us the Tour. It can be a member, employee or a broker.</inlineHelpText>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tour Outcomes (Referrer)</relationshipLabel>
        <relationshipName>Tour_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Same_Building_as_Opp__c</fullName>
        <formula>IF(Location__c = Opportunity__r.Building__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Building as Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled With</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours (Scheduled With)</relationshipLabel>
        <relationshipName>Tours_Scheduled_With</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Actual__c</fullName>
        <description>Start Date and Time of the Tour.</description>
        <label>Start Time Actual</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>8:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Email_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Email Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today_date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Canceled_Date__c</fullName>
        <label>Tour Canceled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Completed__c</fullName>
        <label>Tour Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Confirmation_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tour Confirmation Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tour_Date_Calculation__c</fullName>
        <formula>today()- Tour_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Date Calculation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Date_Time__c</fullName>
        <formula>datetimevalue(text(Tour_Date__c)+ &quot; &quot; + 

If(Right(text(Start_Time__c), 2) = &quot;PM&quot; &amp;&amp; Left(text(Start_Time__c), 2) = &quot;12&quot;, 
Left(text(Start_Time__c), 5) + &quot;:00&quot;, 
If(Right(text(Start_Time__c), 2) = &quot;AM&quot; &amp;&amp; Left(text(Start_Time__c), 2) = &quot;12&quot;, 
&quot;00:&quot; + Mid(text(Start_Time__c), 4, 2) + &quot;:00&quot;, 
If(Right(text(Start_Time__c),2)=&quot;PM&quot; &amp;&amp; Len(text(Start_Time__c))=6, 
text(value(Left(text(Start_Time__c),1)) + 12)+right(left(text(Start_Time__c),4),3)+&quot;:00&quot;, 
If(Len(text(Start_Time__c))&gt;6,Left(text(Start_Time__c),5), 
&quot;0&quot;+Left(text(Start_Time__c),4))+&quot;:00&quot;)) 
) 
) - Location__r.Timezone_GMT_Offset__c / 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tour_Date__c</fullName>
        <label>Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Modification_Web_Form_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://welcome.wework.com/forms/modifytour.php?tourId=&quot;&amp;Id,&quot;Modify Tour&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Modification Web Form Link (testing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Notes__c</fullName>
        <formula>IF(ISBLANK(Lead__c), Opportunity__r.Tour_Notes__c, Lead__r.Tour_Notes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Form__c</fullName>
        <formula>IF( AND(ISBLANK(Opportunity__c), NOT(ISBLANK(Lead__c))), HYPERLINK(&quot;/lead/leadconvert.jsp?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;id=&quot;&amp; Lead__r.Lead_Id__c ,&quot;Convert Lead&quot;,&quot;_self&quot;), HYPERLINK(&quot;https://welcome.wework.com/forms/tour.php?id=&quot;&amp;Opportunity__c&amp;&quot;&amp;tourId=&quot;&amp;Id,&quot;Fill Out Form&quot;,&quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>You can&apos;t fill out this form for Leads. You have to have an Opportunity in order to fill out the form. Information on Opportunity and Account is updated based on the response. You can click the link &quot;Convert Lead&quot; to create an Opportunity.</inlineHelpText>
        <label>Tour Outcome Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Link_SMS__c</fullName>
        <formula>&quot;&amp;Id=&quot; + Id + &quot;&amp;UserId=005F0000002YbvS&quot; + &quot;&amp;From=+14156695919&quot; + &quot;&amp;Type=SMS&amp;To=&quot; + Assigned_To__r.MobilePhone + &quot;&amp;Body=Tour with &quot; + Scheduled_By__r.FirstName + &quot; &quot; +  Scheduled_By__r.LastName + &quot; @ &quot; +  TEXT(Start_Time__c) + &quot;. http://to.wework.com/&quot; + Id + &quot;/&quot; + Assigned_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Outcome Link SMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome_Notes__c</fullName>
        <label>Tour Outcome Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tour_Outcome__c</fullName>
        <label>Tour Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Very Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tour_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tour Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TourParticipated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tour_Reminder_SMS__c</fullName>
        <formula>&quot;&amp;Id=&quot;+ Id +
&quot;&amp;UserId=005F0000002YbvS&quot;+
&quot;&amp;From=+14156695919&quot;+
&quot;&amp;Type=SMS&amp;To=&quot; + IF(ISBLANK(Scheduled_By__r.MobilePhone), Scheduled_By__r.Phone, Scheduled_By__r.MobilePhone) +
&quot;&amp;Body=We look forward to meeting you at WeWork for your tour at &quot; + TEXT(Start_Time__c) + &quot; today! If you can&apos;t make it reschedule here: http://t.wework.com/&quot; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tour Reminder SMS</label>
        <type>Text</type>
    </fields>
</CustomObject>